--- a/eureka-server/src/main/resources/application-uat.yml
+++ b/eureka-server/src/main/resources/application-uat.yml
@@ -1,10 +1,10 @@
 spring:
   profiles: uat
   datasource:
-    name: test
-    url: jdbc:mysql://127.0.0.1:3306/springboot?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-    username: root
-    password: root
+    name: public
+    url: jdbc:mysql://47.106.140.247:3306/public?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: public
+    password: public
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
