--- a/login-server/src/main/resources/application-uat.yml
+++ b/login-server/src/main/resources/application-uat.yml
@@ -1,5 +1,5 @@
 spring:
-  profiles: test
+  profiles: uat
   datasource:
     name: public
     url: jdbc:mysql://47.106.140.247:3306/public?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
@@ -7,7 +7,7 @@ spring:
     password: public
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     filters: stat
     maxActive: 20
     initialSize: 1
@@ -22,6 +22,5 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
 
-
 valueServer:
-  testValue: 测试
+  testValue: UAT
